--- a/templates/base.html
+++ b/templates/base.html
@@ -1,9 +1,12 @@
 <head>
     <title>this is homepage title</title>
+    <h1>this is homepage header</h1>
 </head>
 
 <ul>
-	<h2>this is homepage :)</h2>
+    {% block body %}
+        <h2>this is homepage :)</h2>
+    {% endblock body %}
 </ul>
 
 <footer>
