--- a/personal/templates/personal/personal_home_screen.html
+++ b/personal/templates/personal/personal_home_screen.html
@@ -2,4 +2,6 @@
 
 {% block body %}
     <h2>this has come form override of base html</h2>
+
+    {% include 'personal/snippet/snippet.html' %}
 {% endblock body %}
