--- a/personal/templates/personal/personal_home_screen.html
+++ b/personal/templates/personal/personal_home_screen.html
@@ -18,7 +18,7 @@
         {% include 'personal/snippet/snippet.html' %}
     </div>
 
-    {% for item in my_list %}
+    {% for item in questions %}
         {% include 'personal/snippet/snippet.html' with value=item %}
     {% endfor %}
 
