--- a/personal/templates/personal/snippet/snippet.html
+++ b/personal/templates/personal/snippet/snippet.html
@@ -3,5 +3,9 @@
 <h4>**this is snippet included in this pages html file**</h4>
 
 -->
-
+<!--
 <p>{{ value }}</p>
+-->
+
+<h3>{{ value.title }} | ({{ value.priority }})</h3>
+<p style="margin-left: 10px;">{{ value.question }}</p>
