--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,7 @@
 <head>
-    <title>this is homepage title</title>
+    {% block title %}
+        <title>this is homepage title</title>
+    {% endblock %}
     <h1>this is homepage header</h1>
 </head>
 
