--- a/course_training/templates/cource_training/course_training_home_screen.html
+++ b/course_training/templates/cource_training/course_training_home_screen.html
@@ -2,7 +2,7 @@
 
 {% block title %}
     <title>This is course training page</title>
-{% endblock %}
+{% endblock title %}
 
 {% block body %}
     <h2>this has come form override of base html</h2>
