--- a/personal/templates/personal/personal_home_screen.html
+++ b/personal/templates/personal/personal_home_screen.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
+{% block title %}
+    <title>this is shakhsi page</title>
+{% endblock title %}
+
 {% block body %}
     <h2>this has come form override of base html</h2>
 
