--- a/course_training/templates/cource_training/course_training_home_screen.html
+++ b/course_training/templates/cource_training/course_training_home_screen.html
@@ -6,7 +6,7 @@
 
 {% block body %}
     <h2>this has come form override of base html</h2>
-
+    <h2>These are registered users : </h2>
 
     {% for account in accounts %}
         <p><b>{{ account }} | {{ account.username }}</b></p>
