--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,9 @@
         <title>this is homepage title</title>
     {% endblock %}
     {% if request.user.is_authenticated %} <!-- if user is authenticated so it means that someone is already loged in -->
-        <p><a href="{% url "home" %}">Home</a> | <a href="{% url 'logout' %}">logout</a></p>
+        <p><a href="{% url "home" %}">Home</a> |
+            <a href="{% url 'account' %}">Account</a>  |
+            <a href="{% url 'logout' %}">logout</a></p>
         <p>Hello, {{ request.user.username }} </p><!-- look through url file
                                                                                 if there is any logout name to it -->
     {% else %} <!-- so if user is not authenticated -->
