--- a/templates/snippets/footer.html
+++ b/templates/snippets/footer.html
@@ -1,5 +1,10 @@
 <hr>
-<p>Footer </p>
+<div class="text-capitalize shadow d-inline-flex d-xl-flex flex-column flex-grow-1 flex-shrink-1 align-items-baseline align-content-end align-self-baseline mx-auto justify-content-xl-center align-items-xl-center footer-basic">
+    <footer>
+        <p class="copyright">Company Name © 2017</p>
+    </footer>
+</div>
+
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
