--- a/templates/base.html
+++ b/templates/base.html
@@ -1,24 +1,32 @@
 {% load staticfiles %}
 <link rel="stylesheet" type="text/css" href="{% static "header.css" %}">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<!--
+<style>
+    html{
+        height: 100%;
+    }
+</style>
+-->
 
-<head>
-    {% block title %}
-        <title>this is homepage title</title>
-    {% endblock title%}
 
-    {% include 'snippets/header.html' %}
-</head>
+<html>
+    <head>
+        {% block title %}
+            <title>this is homepage title</title>
+        {% endblock title%}
 
+        {% include 'snippets/header.html' %}
+    </head>
 
-<body>
-    <hr>
-    <ul>
-        {% block body %}
-            <h2>this is homepage :)</h2>
-        {% endblock body %}
-    </ul>
+    <body class="body">
+        <hr>
+        <ul>
+            {% block body %}
+                <h2>this is homepage :)</h2>
+            {% endblock body %}
+        </ul>
 
-{% include 'snippets/footer.html' %}
-</body>
-
+        {% include 'snippets/footer.html' %}
+    </body>
+</html>
