--- a/templates/snippets/footer.html
+++ b/templates/snippets/footer.html
@@ -1,14 +1,5 @@
-<!--
-<div class="text-capitalize shadow d-inline-flex d-xl-flex flex-column flex-grow-1 flex-shrink-1 align-items-baseline align-content-end align-self-baseline mx-auto justify-content-xl-center align-items-xl-center footer-basic">
--->
-
-<style type="text/css">
-    .footer{
-        width: 100%;
-    }
-</style>
-
-<div class="text-capitalize shadow d-inline-flex d-xl-flex justify-content-xl-center justify-content-center fixed-bottom footer">
+<!--  justify-content-center -->
+<div class="text-capitalize shadow d-inline-flex d-xl-flex justify-content-xl-center fixed-bottom footer">
     <footer>
         <p class="copyright">Company Name © 2017</p>
     </footer>
