--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -1,30 +1,57 @@
 {% extends 'base.html' %}
 
+<style>
+
+    .form-signin {
+      width: 50%;
+      max-width: 330px;
+      padding: 15px;
+      margin: auto;
+    }
+    .form-signin .checkbox {
+      font-weight: 400;
+    }
+    .form-signin .form-control {
+      position: center;
+      box-sizing: border-box;
+      height: auto;
+      padding: 10px;
+      font-size: 16px;
+    }
+    .form-signin .form-control:focus {
+      z-index: 2;
+    }
+    .form-signin input[type="email"] {
+      margin-bottom: -1px;
+      border-bottom-right-radius: 0;
+      border-bottom-left-radius: 0;
+    }
+    .form-signin input[type="password"] {
+      margin-bottom: 10px;
+      border-top-left-radius: 0;
+      border-top-right-radius: 0;
+    }
+</style>
+
+
 {% block title %}
     <title>This is login</title>
 {% endblock title %}
 
 {%  block body %}
-    <h2>Login</h2>
-    <form method="post">
+<div class="login-box">
+    <form class="form-signin" method="post">
         {% csrf_token %} <!-- this is required for work properly
-                                this is encryption token, that is like : its a security thing and
-                                works like if you stay for too long on the form it will expire -->
+                                    this is encryption token, that is like : its a security thing and
+                                    works like if you stay for too long on the form it will expire -->
+        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+        <label for="inputEmail" class="sr-only">Email address</label>
+        <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+        <br>
+        <label for="inputPassword" class="sr-only">Password</label>
+        <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required>
 
-        <!-- as the form has different fields  -->
-        {% for field in login_form %}
-
-            <p>
-                {{ field.label_tag }} <!-- name of the field as we have email, username and ... -->
-                {{ field }} <!-- print out the field itself -->
-
-                {%  if field.help_text  %} <!-- if any of field has any help text then display it -->
-                    <small style="color: gray">{{ field.help_text }}</small>
-                {% endif %}
-            </p>
-        {% endfor %}
-
-            <!-- loop through any potential errors  -->
+        <!-- loop through any potential errors  -->
             <!-- how does form knows if it  has errors => if we do a post request => it checks if the form is valid
                         if is not valid it still adds the form to the context and in that point if the form is not
                         valid it's gonna have errors -->
@@ -41,7 +68,9 @@
                 <p>{{ login_form.non_field_errors }}</p>
             </div>
         {% endif %}
+        <br>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Log in</button>
 
-        <button type="submit">Login</button>
     </form>
+</div>
 {% endblock body %}
