--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -1,76 +1,60 @@
 {% extends 'base.html' %}
 
-<style>
-
-    .form-signin {
-      width: 50%;
-      max-width: 330px;
-      padding: 15px;
-      margin: auto;
-    }
-    .form-signin .checkbox {
-      font-weight: 400;
-    }
-    .form-signin .form-control {
-      position: center;
-      box-sizing: border-box;
-      height: auto;
-      padding: 10px;
-      font-size: 16px;
-    }
-    .form-signin .form-control:focus {
-      z-index: 2;
-    }
-    .form-signin input[type="email"] {
-      margin-bottom: -1px;
-      border-bottom-right-radius: 0;
-      border-bottom-left-radius: 0;
-    }
-    .form-signin input[type="password"] {
-      margin-bottom: 10px;
-      border-top-left-radius: 0;
-      border-top-right-radius: 0;
-    }
-</style>
-
 
 {% block title %}
     <title>This is login</title>
 {% endblock title %}
 
 {%  block body %}
-<div class="login-box">
-    <form class="form-signin" method="post">
-        {% csrf_token %} <!-- this is required for work properly
+    <style>
+        .login-box{
+            background: #1d2124;
+            border-radius: 10px;
+        }
+    </style>
+
+
+        <div class="col-md-4 offset-md-4 login-box">
+            <br>
+            <form method="post">
+                {% csrf_token %} <!-- this is required for work properly
                                     this is encryption token, that is like : its a security thing and
                                     works like if you stay for too long on the form it will expire -->
-        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-        <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-        <br>
-        <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required>
+                <h2 class="sr-only">Login Form</h2>
+                <div class="illustration">
+                    <i class="icon ion-ios-locked-outline"></i>
+                </div>
+                <div class="form-group">
+                    <input class="form-control" type="email" name="email" placeholder="Email">
+                </div>
+                <div class="form-group">
+                    <input class="form-control" type="password" name="password" placeholder="Password">
+                </div>
 
-        <!-- loop through any potential errors  -->
-            <!-- how does form knows if it  has errors => if we do a post request => it checks if the form is valid
-                        if is not valid it still adds the form to the context and in that point if the form is not
-                        valid it's gonna have errors -->
-        {% for field in login_form %}
-            {% for error in field.errors %}
-                <p style="color: red">{{ error }}</p>
-            {% endfor %}
-        {% endfor %}
-        <!-- non error field : that is not unique to any particular field in the form like
-                if the password is bad or the login is bad or any error that is not uniqe to any particular field
-                    like they didnt enter password right so they will get this error-->
-        {% if login_form.non_field_errors %}
-            <div style="color: red">
-                <p>{{ login_form.non_field_errors }}</p>
-            </div>
-        {% endif %}
-        <br>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Log in</button>
+                <!-- loop through any potential errors  -->
+                    <!-- how does form knows if it  has errors => if we do a post request => it checks if the form is valid
+                                if is not valid it still adds the form to the context and in that point if the form is not
+                                valid it's gonna have errors -->
+                {% for field in login_form %}
+                    {% for error in field.errors %}
+                        <p style="color: red">{{ error }}</p>
+                    {% endfor %}
+                {% endfor %}
+                <!-- non error field : that is not unique to any particular field in the form like
+                        if the password is bad or the login is bad or any error that is not uniqe to any particular field
+                            like they didnt enter password right so they will get this error-->
+                {% if login_form.non_field_errors %}
+                    <div style="color: red">
+                        <p>{{ login_form.non_field_errors }}</p>
+                    </div>
+                {% endif %}
+                <div class="form-group">
+                    <button class="btn btn-primary btn-block" type="submit">Log In</button>
+                </div>
+                <a  class="forgot" href="#">Forgot your email or password?</a>
+            </form>
+            <br>
+        </div>
 
-    </form>
-</div>
+
 {% endblock body %}
