--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,6 @@
+{% load staticfiles %}
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
 
 <html>
     <head>
@@ -19,6 +21,6 @@
                 <h2>this is homepage :)</h2>
             {% endblock body %}
         </ul>
-
+        {% include 'snippets/footer.html' %}
     </body>
 </html>
