--- a/templates/snippets/header.html
+++ b/templates/snippets/header.html
@@ -126,6 +126,7 @@
                     <li role="presentation" class="nav-item"><a class="nav-link" href="{% url "home" %}">Home</a></li>
                     <li role="presentation" class="nav-item"><a class="nav-link" href="{% url 'training' %}">Training</a></li>
                     <li role="presentation" class="nav-item"><a class="nav-link" href="{% url 'shakhsi' %}">Shakhsi</a></li>
+                    <li role="presentation" class="nav-item"><a class="nav-link" href="{% url 'iframe' %}">Iframe_test</a></li>
                 </ul>
             <!-- END LEFT MENU -->
 
