--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
         {% endblock title%}
 
         {% include 'snippets/header.html' %}
+        {% include 'snippets/base_css.html' %}
     </head>
 
     <body>
