--- a/templates/snippets/header.html
+++ b/templates/snippets/header.html
@@ -135,6 +135,9 @@
                     <li role="presentation" class="nav-item">
                         <a class="nav-link" href="{% url 'iframe' %}">Iframe_test</a>
                     </li>
+                    <li role="presentation" class="nav-item">
+                        <a class="nav-link" href="{% url 'reddit' %}">reddit</a>
+                    </li>
                     {% if user.is_admin %}
                         <li role="presentation" class="nav-item">
                             <a class="nav-link" href="{% url 'admin:index' %}">Admin</a>
