--- a/account/templates/account/account.html
+++ b/account/templates/account/account.html
@@ -16,6 +16,11 @@
         .h3{
             color: white;
         }
+        .blog-posts{
+            max-width: 500px;
+            width: 100%;
+            margin: auto;
+        }
     </style>
 
 
@@ -62,6 +67,29 @@
             <a href="{% url 'password_change' %}">Change Password</a>
         </form>
         <br>
+    </div>
+
+    <div class="container mt-4 p-4">
+        <div class="row">
+            <div class="blog-posts">
+                <h3 class="mb-3 font-weight-normal">Blog Posts</h3>
+                {% if blog_posts %}
+                <ul>
+                    {% for post in blog_posts %}
+                        <!-- reason for this(post.slug) is that inside blog view we are referencing slug for def
+                         if we dont do that it wont know where to get that slug from
+                          so we are saying that slug has come from post object so we are passing it and
+                          giving it what it needs -->
+                        <a href="{% url 'blog:detail' post.slug %}" style="text-decoration: none">
+                            <li class="list-group-item">{{ post }}</li>
+                        </a>
+                    {% endfor %}
+                </ul>
+                {% else %}
+                    <p>You have no blog post. Create a post <a href="{% url 'blog:create' %}">here</a></p>
+                {% endif %}
+            </div>
+        </div>
     </div>
 
 {% endblock body %}
