--- a/redditpage/templates/reddit/home.html
+++ b/redditpage/templates/reddit/home.html
@@ -1,20 +1,19 @@
 {% extends 'base.html' %}
-
+{% load staticfiles %}
 
 {% block body %}
 <style type="text/css">
-	@media (max-width: 768px) { 
+	@media (max-width: 768px) {
 		.right-column{
 			margin-left: 0px;
 		}
 	}
-	@media (min-width: 768px) { 
+	@media (min-width: 768px) {
 		.right-column{
 			margin-left: 20px;
 		}
 	}
 	.blog-post-container{
-		background-color: #fff;
 		margin-bottom: 20px;
 		width: 100%;
 	}
@@ -28,39 +27,34 @@
 	.right-column{
 		padding:0px;
 	}
+	.lead{
+		font-size: 17px;
+	}
 </style>
 <div class="container">
 	<div class="row">
 
-		<!-- Top 'create post' bar -->
-		<div class="create-post-bar d-lg-none col-lg-7 offset-lg-1">
-            <!-- we are doing blog:create because we created secondary url in blog folder
-             and as we shared name blog in main urls [ path('blog/', include('blog.urls', 'blog')) ] so we use blog: ( so
-              it means look through url names to find blog name and ) as second part :create (look for url that's named create) -->
-			<p><a href="{% url 'blog:create' %}">Create post</a></p>
-		</div>
-		<!-- end Top 'create post' bar -->
-
-
 		<!-- blog feed -->
 		<div class="left-column col-lg-7 offset-lg-1">
-			
-			<div class="blog-post-container">
-				<p>Thingy</p>
-			</div>
-			
-			<div class="blog-post-container">
-				<p>Thingy</p>
-			</div>
 
-			<div class="blog-post-container">
-				<p>Thingy</p>
+			<!-- Top 'create post' bar -->
+			<div class="d-lg-none mb-3">
+				<div class="card m-auto d-flex flex-column p-3">
+					<img class="img-fluid d-block m-auto pb-2" src="{% static '150.png' %}" width="72" height="72">
+					<p class="lead">In this course you'll learn how to build a simple blog with user registration and blog CRUD functionality. Django is a powerful
+	  					framework and you'll see why in this course.</p>
+					<p class="m-auto"><a class="btn btn-primary" href="{% url 'blog:create' %}">Create post</a></p>
+				</div>
 			</div>
+			<!-- end Top 'create post' bar -->
 
-			<div class="blog-post-container">
-				<p>Thingy</p>
-			</div>
-
+			<!-- Blog posts-->
+			{% for post in blog_posts %}
+				<div class="blog-post-container">
+					{% include 'blog/snippets/blog_post_snippet.html' with blog_post=post %}
+				</div>
+			{% endfor %}
+			<!-- End Blog posts-->
 		</div>
 		<!-- end blog feed -->
 
@@ -68,13 +62,13 @@
 		<!-- Right 'create post' column  -->
 		<div class="right-column col-lg-3 d-lg-flex d-none flex-column">
 
-			<div class="create-post-bar">
-				<p>Stuff</p>
-				<p>Stuff</p>
-				<p>Stuff</p>
-				<p><a href="{% url 'blog:create' %}">Create post</a></p>
+			<div class="card create-post-bar d-flex flex-column p-3">
+				<img class="img-fluid d-block m-auto pb-2" src="{% static '150.png' %}" width="72" height="72">
+				<p class="lead">In this course you'll learn how to build a simple blog with user registration and blog CRUD functionality. Django is a powerful
+  					framework and you'll see why in this course.</p>
+				<p class="m-auto"><a class="btn btn-primary" href="{% url 'blog:create' %}">Create post</a></p>
 			</div>
-		
+
 		</div>
 		<!-- end Right 'create post' column  -->
 
@@ -82,3 +76,5 @@
 </div>
 
 {% endblock body %}
+
+
