--- a/account/templates/account/account.html
+++ b/account/templates/account/account.html
@@ -11,6 +11,8 @@
     <style>
         .login-box{
             background: #1d2124;
+        }
+        .login-box, .blogpost-card{
             border-radius: 10px;
         }
         .h3{
@@ -20,6 +22,10 @@
             max-width: 500px;
             width: 100%;
             margin: auto;
+        }
+        .blogpost-card{
+            background: #1d2124;
+            color: white;
         }
     </style>
 
@@ -73,21 +79,21 @@
         <div class="row">
             <div class="blog-posts">
                 <h3 class="mb-3 font-weight-normal">Blog Posts</h3>
-                {% if blog_posts %}
-                <ul>
-                    {% for post in blog_posts %}
-                        <!-- reason for this(post.slug) is that inside blog view we are referencing slug for def
-                         if we dont do that it wont know where to get that slug from
-                          so we are saying that slug has come from post object so we are passing it and
-                          giving it what it needs -->
-                        <a href="{% url 'blog:detail' post.slug %}" style="text-decoration: none">
-                            <li class="list-group-item">{{ post }}</li>
-                        </a>
-                    {% endfor %}
-                </ul>
-                {% else %}
-                    <p>You have no blog post. Create a post <a href="{% url 'blog:create' %}">here</a></p>
-                {% endif %}
+                    {% if blog_posts %}
+                    <ul>
+                        {% for post in blog_posts %}
+                            <!-- reason for this(post.slug) is that inside blog view we are referencing slug for def
+                             if we dont do that it wont know where to get that slug from
+                              so we are saying that slug has come from post object so we are passing it and
+                              giving it what it needs -->
+                            <a class="blogpost-card" href="{% url 'blog:detail' post.slug %}" style="text-decoration: none">
+                                <li class="list-group-item blogpost-card" >{{ post }}</li>
+                            </a>
+                        {% endfor %}
+                    </ul>
+                    {% else %}
+                        <p class="blogpost-card blog-posts">You have no blog post. Create a post <a href="{% url 'blog:create' %}">here</a></p>
+                    {% endif %}
             </div>
         </div>
     </div>
