--- a/blog/templates/blog/snippets/blog_post_snippet.html
+++ b/blog/templates/blog/snippets/blog_post_snippet.html
@@ -1,35 +1,55 @@
 <style type="text/css">
 	.card{
 		max-width: 700px;
+        width: 100%;
+
 	}
 	.card-body{
 		padding: 20px;
 	}
 </style>
 
-<div class="container">
-	<div class="row">
+{% if blog_post %}
+    <div class="container">
+        <div class="row">
 
-		<!-- Blog Post -->
-		<div class="card m-auto">
-			<a href="{% url 'blog:detail' post.slug %}">
-				<img class="card-img-top" src="{{blog_post.image.url}}">
-			</a>
+            <!-- Blog Post -->
+            <div class="card m-auto">
+                <a href="{% url 'blog:detail' post.slug %}">
+                    <img class="card-img-top" src="{{blog_post.image.url}}">
+                </a>
 
-			<div class="card-body mt-2 mb-2">
-				<a href="{% url 'blog:detail' post.slug %}">
-					<h2 class="card-title">{{blog_post.title}}</h2>
-				</a>
-                <!-- when we are in production website we should not use safe because it will let the author to use script(html, javascript , ...)
-                 in their post so they may use it to destroy database or else (security measure)-->
-				<p class="card-text">{{blog_post.body|safe|truncatechars:180}}</p>
-				{% if blog_post.author == request.user %}
-					<a href="{% url 'blog:edit' blog_post.slug %}" class="btn btn-primary">Update</a>
-				{% endif %}
-			</div>
-			<div class="card-footer text-muted">
-			  Updated on {{blog_post.date_updated}} by {{blog_post.author}}
-			</div>
-		</div>
-	</div>
-</div>
+                <div class="card-body mt-2 mb-2">
+                    <a href="{% url 'blog:detail' post.slug %}">
+                        <h2 class="card-title">{{blog_post.title}}</h2>
+                    </a>
+                    <!-- when we are in production website we should not use safe because it will let the author to use script(html, javascript , ...)
+                     in their post so they may use it to destroy database or else (security measure)-->
+                    <p class="card-text">{{blog_post.body|safe|truncatechars:180}}</p>
+                    {% if blog_post.author == request.user %}
+                        <a href="{% url 'blog:edit' blog_post.slug %}" class="btn btn-primary">Update</a>
+                    {% endif %}
+                </div>
+                <div class="card-footer text-muted">
+                  Updated on {{blog_post.date_updated}} by {{blog_post.author}}
+                </div>
+            </div>
+        </div>
+    </div>
+{% else %}
+    <div class="container">
+        <div class="row">
+            <div class="card m-auto">
+                <div class="card-body mt-2 mb-2">
+                    <h2 class="card-title">
+                        No result
+                    </h2>
+                    <p class="card-text">
+                        There was no result for "{{ query }}"
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+{% endif %}
