--- a/redditpage/templates/reddit/home.html
+++ b/redditpage/templates/reddit/home.html
@@ -49,15 +49,22 @@
 			<!-- end Top 'create post' bar -->
 
 			<!-- Blog posts-->
-			{% for post in blog_posts %}
-				<div class="blog-post-container">
-					{% include 'blog/snippets/blog_post_snippet.html' with blog_post=post %}
-				</div>
-			{% endfor %}
+            {% if blog_posts %}
+                {% for post in blog_posts %}
+                    <div class="blog-post-container">
+                        {% include 'blog/snippets/blog_post_snippet.html' with blog_post=post %}
+                    </div>
+                {% endfor %}
+            {% else %}
+                <div class="blog-post-container">
+                    {% include 'blog/snippets/blog_post_snippet.html' with query=query %}
+                </div>
+            {% endif %}
 			<!-- End Blog posts-->
+            <!-- pagination -->
+            {%  include 'blog/snippets/blog_post_pagination.html' with blog_posts=blog_posts %}
 		</div>
 		<!-- end blog feed -->
-
 
 		<!-- Right 'create post' column  -->
 		<div class="right-column col-lg-3 d-lg-flex d-none flex-column">
