--- a/templates/snippets/footer.html
+++ b/templates/snippets/footer.html
@@ -1,7 +1,7 @@
 <!--  justify-content-center -->
-<div class="text-capitalize shadow d-inline-flex d-xl-flex justify-content-xl-center fixed-bottom footer">
+<div class="text-capitalize shadow-lg d-flex flex-row footer justify-content-center">
     <footer>
-        <p class="copyright">Company Name © 2017</p>
+        <p class="copyright" style="text-align: center">Company Name © 2017</p>
     </footer>
 </div>
 
