--- a/templates/snippets/header.html
+++ b/templates/snippets/header.html
@@ -109,10 +109,6 @@
       background: #66d7d7;
     }
 
-    .search-bar{
-		width: 100%;
-	}
-
 </style>
 <div>
     <nav class="navbar navbar-light navbar-expand-md navigation-clean-button">
@@ -146,10 +142,9 @@
                             <a class="nav-link" href="{% url 'admin:index' %}">Admin</a>
                         </li>
                     {% endif %}
-
-                        <form method="get">
-                            <input class="form-control"  type="text" name="q" id="id_q" placeholder="Search...">
-                        </form>
+                    <form method="get">
+                        <input class="form-control"  type="text" name="q" id="id_q" placeholder="Search...">
+                    </form>
                 </ul>
             <!-- END LEFT MENU -->
 
@@ -177,3 +172,7 @@
         </div>
     </nav>
 </div>
+
+<script type="text/javascript">
+    document.getElementById("id_q").value = "{{ query }}"
+</script>
